# engineering_project_simulation

./: CMakeLists.txt  CSVParser.hpp  Cache.cpp  Cache.hpp  Config.cpp  Config.hpp  Core.cpp  Core.hpp  DTCM.cpp  DTCM.hpp  EventQueue.hpp  Interconnect.cpp  Interconnect.hpp  JSONParser.hpp  MainMemory.cpp  MainMemory.hpp  Main_memory.h  MemoryBank.cpp  MemoryBank.hpp  MemorySystem.cpp  MemorySystem.hpp  README.md  Scheduler.cpp  Scheduler.hpp  Simulator.cpp  Simulator.hpp  StatsCollector.cpp  StatsCollector.hpp  TaskGraph.cpp  TaskGraph.hpp  Types.hpp  example_config.json  main.cpp  matmul_ops.csv  matmul_tasks.csv  minimal_config.json  stats.json  test.csv  test.json  test_config  (+12 more)
